--- a/app/src/main/res/layout/activity_connexion.xml
+++ b/app/src/main/res/layout/activity_connexion.xml
@@ -1,158 +1,174 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".launcher.ConnexionActivity">
+    android:layout_height="match_parent">
 
-    <RelativeLayout
-        android:id="@+id/connexion_image_layout"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/grad"
-        android:paddingBottom="20dp">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        tools:context=".launcher.ConnexionActivity">
 
         <RelativeLayout
-            android:id="@+id/imgDatePlace"
-            android:layout_width="wrap_content"
+            android:id="@+id/connexion_image_layout"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true">
-            <!-- Logo Connexion-->
-            <ImageView
-                android:id="@+id/logo_connection_app"
-                android:layout_width="@dimen/logo_connexion_app_width"
-                android:layout_height="@dimen/logo_connexion_app_height"
-                android:layout_marginStart="@dimen/logo_connexion_app_marginStart"
-                android:layout_marginTop="@dimen/logo_connexion_app_marginTop"
-                android:layout_marginEnd="@dimen/logo_connexion_app_marginEnd"
-                app:srcCompat="@mipmap/ic_launcher" />
+            android:background="@drawable/grad"
+            android:paddingBottom="20dp">
+
+            <RelativeLayout
+                android:id="@+id/imgDatePlace"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true">
+                <!-- Logo Connexion-->
+                <ImageView
+                    android:id="@+id/logo_connection_app"
+                    android:layout_width="@dimen/logo_connexion_app_width"
+                    android:layout_height="@dimen/logo_connexion_app_height"
+                    android:layout_marginStart="@dimen/logo_connexion_app_marginStart"
+                    android:layout_marginTop="@dimen/logo_connexion_app_marginTop"
+                    android:layout_marginEnd="@dimen/logo_connexion_app_marginEnd"
+                    app:srcCompat="@mipmap/ic_launcher" />
+
+            </RelativeLayout>
+            <!-- Nom de l'application -->
+            <TextView
+                android:id="@+id/appli_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/imgDatePlace"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="10sp"
+                android:fontFamily="sans-serif-light"
+                android:text="@string/app_name"
+                android:textColor="@color/white"
+                android:textSize="32sp"
+                android:textStyle="bold" />
 
         </RelativeLayout>
-        <!-- Nom de l'application -->
-        <TextView
-            android:id="@+id/appli_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/imgDatePlace"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="10sp"
-            android:fontFamily="sans-serif-light"
-            android:text="@string/app_name"
-            android:textColor="@color/white"
-            android:textSize="32sp"
-            android:textStyle="bold" />
 
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:id="@+id/connexion_relative"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/connexion_image_layout"
-        android:background="@color/white">
-
-        <LinearLayout
+        <RelativeLayout
+            android:id="@+id/connexion_relative"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_centerInParent="true"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:layout_below="@id/connexion_image_layout"
+            android:background="@color/white">
 
             <LinearLayout
-                android:id="@+id/connexion_identifier_layout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <!-- Champs email de connexion-->
-                <EditText
-                    android:id="@+id/connexion_identifier"
-                    android:layout_width="@dimen/connexion_identifier_width"
-                    android:layout_height="@dimen/connexion_identifier_height"
-                    android:layout_marginStart="@dimen/connexion_identifier_marginStart"
-                    android:layout_marginTop="@dimen/connexion_identifier_marginTop"
-                    android:layout_marginEnd="@dimen/connexion_identifier_marginEnd"
-                    android:background="@drawable/background_textview"
-                    android:hint="@string/connexion_identifier_HintText"
-                    android:inputType="textEmailAddress"
-                    android:paddingLeft="@dimen/connexion_identifier_paddingLeft"
-                    android:paddingTop="@dimen/connexion_identifier_paddingTop"
-                    android:textColor="#000"
-                    android:textColorHint="#000"
-                    android:textSize="@dimen/button_text_size" />
-            </LinearLayout>
+                android:layout_height="match_parent"
+                android:layout_centerInParent="true"
+                android:orientation="vertical">
 
-            <LinearLayout
-                android:id="@+id/connexion_password_layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <!-- Champs password de connexion-->
-                <EditText
-                    android:id="@+id/connexion_password"
-                    android:layout_width="@dimen/connexion_password_width"
-                    android:layout_height="@dimen/connexion_password_height"
-                    android:layout_marginStart="@dimen/connexion_password_marginStart"
-                    android:layout_marginTop="@dimen/connexion_password_marginTop"
-                    android:layout_marginEnd="@dimen/connexion_password_marginEnd"
-                    android:background="@drawable/background_textview"
-                    android:hint="@string/connexion_password_HintText"
-                    android:inputType="textPassword"
-                    android:paddingLeft="@dimen/connexion_password_paddingLeft"
-                    android:paddingTop="@dimen/connexion_password_paddingTop"
-                    android:textColor="#000"
-                    android:textColorHint="#000"
-                    android:textSize="@dimen/button_text_size" />
-            </LinearLayout>
+                <LinearLayout
+                    android:id="@+id/connexion_identifier_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <!-- Champs email de connexion-->
+                    <EditText
+                        android:id="@+id/connexion_identifier"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/connexion_identifier_height"
+                        android:layout_marginStart="@dimen/connexion_identifier_marginStart"
+                        android:layout_marginTop="@dimen/connexion_identifier_marginTop"
+                        android:layout_marginEnd="@dimen/connexion_identifier_marginEnd"
+                        android:background="@drawable/background_textview"
+                        android:hint="@string/connexion_identifier_HintText"
+                        android:inputType="textEmailAddress"
+                        android:paddingLeft="@dimen/connexion_identifier_paddingLeft"
+                        android:paddingTop="@dimen/connexion_identifier_paddingTop"
+                        android:textColor="#000"
+                        android:textColorHint="#000"
+                        android:textSize="@dimen/button_text_size" />
+                </LinearLayout>
 
-            <LinearLayout
-                android:id="@+id/boutton_connection_layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <!-- Bouton de connexion-->
-                <Button
-                    android:id="@+id/button_connect"
-                    android:layout_width="@dimen/button_connect_width"
-                    android:layout_height="@dimen/button_connect_height"
-                    android:layout_marginStart="@dimen/button_connect_marginStart"
-                    android:layout_marginTop="@dimen/button_connect_marginTop"
-                    android:layout_marginEnd="@dimen/button_connect_marginEnd"
-                    android:background="@drawable/background_button_blue"
-                    android:text="@string/button_connect_text"
-                    android:textColor="#000"
-                    android:textSize="@dimen/button_text_size" />
-            </LinearLayout>
+                <LinearLayout
+                    android:id="@+id/connexion_password_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <!-- Champs password de connexion-->
+                    <EditText
+                        android:id="@+id/connexion_password"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/connexion_password_height"
+                        android:layout_marginStart="@dimen/connexion_password_marginStart"
+                        android:layout_marginTop="@dimen/connexion_password_marginTop"
+                        android:layout_marginEnd="@dimen/connexion_password_marginEnd"
+                        android:background="@drawable/background_textview"
+                        android:hint="@string/connexion_password_HintText"
+                        android:inputType="textPassword"
+                        android:paddingLeft="@dimen/connexion_password_paddingLeft"
+                        android:paddingTop="@dimen/connexion_password_paddingTop"
+                        android:textColor="#000"
+                        android:textColorHint="#000"
+                        android:textSize="@dimen/button_text_size" />
+                </LinearLayout>
 
-            <LinearLayout
-                android:id="@+id/boutton_goback_inscription_layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-                <!-- Bouton de retour-->
-                <Button
-                    android:id="@+id/button_goback"
-                    android:layout_width="@dimen/button_goback_width"
-                    android:layout_height="@dimen/button_goback_height"
-                    android:layout_marginStart="@dimen/button_goback_marginStart"
-                    android:layout_marginTop="@dimen/button_goback_marginTop"
-                    android:layout_marginEnd="@dimen/button_goback_marginEnd"
-                    android:layout_marginBottom="@dimen/button_goback_marginBottom"
-                    android:background="@drawable/background_button_blue"
-                    android:text="@string/button_goback_text"
-                    android:textColor="#000"
-                    android:textSize="@dimen/button_text_size" />
+                <LinearLayout
+                    android:id="@+id/boutton_connection_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp">
+                    <!-- Bouton de connexion-->
+                    <Button
+                        android:id="@+id/button_connect"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/button_connect_height"
+                        android:layout_marginStart="@dimen/button_connect_marginStart"
+                        android:layout_marginTop="@dimen/button_connect_marginTop"
+                        android:layout_marginEnd="@dimen/button_connect_marginEnd"
+                        android:background="@drawable/background_button_blue"
+                        android:text="@string/button_connect_text"
+                        android:textColor="#000"
+                        android:textSize="@dimen/button_text_size" />
+                </LinearLayout>
 
-                <!-- Bouton d'inscription-->
-                <Button
-                    android:id="@+id/button_go_inscription"
-                    android:layout_width="@dimen/button_go_inscription_width"
-                    android:layout_height="@dimen/button_go_inscription_height"
-                    android:layout_marginTop="@dimen/button_go_inscription_marginTop"
-                    android:layout_marginEnd="@dimen/button_go_inscription_marginEnd"
-                    android:layout_marginBottom="@dimen/button_go_inscription_marginBottom"
-                    android:background="@drawable/background_button_blue"
-                    android:text="@string/button_sign_up"
-                    android:textColor="#000"
-                    android:textSize="@dimen/button_text_size" />
+                <LinearLayout
+                    android:id="@+id/inscription_button"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="50dp"
+                    android:layout_marginBottom="10dp"
+                    android:orientation="vertical">
+
+                    <!-- Bouton inscription-->
+                    <Button
+                        android:id="@+id/button_go_inscription"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/button_go_inscription_height"
+                        android:layout_marginStart="@dimen/button_go_inscription_marginStart"
+                        android:layout_marginEnd="@dimen/button_go_inscription_marginEnd"
+                        android:background="@drawable/background_button_blue"
+                        android:text="@string/button_inscrip_text"
+                        android:textColor="#000"
+                        android:textSize="@dimen/button_text_size" />
+                    <!-- Bouton retour-->
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/inscription_back"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginBottom="10dp"
+                    android:orientation="vertical">
+
+                    <Button
+                        android:id="@+id/button_goback"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/button_goback_height"
+                        android:layout_marginStart="@dimen/button_goback_marginStart"
+                        android:layout_marginEnd="@dimen/button_goback_marginEnd"
+                        android:background="@drawable/background_button_blue"
+                        android:text="@string/button_goback_text"
+                        android:textColor="#000"
+                        android:textSize="@dimen/button_text_size" />
+                </LinearLayout>
             </LinearLayout>
-        </LinearLayout>
-    </RelativeLayout>
-</LinearLayout>
+        </RelativeLayout>
+    </LinearLayout>
+</ScrollView>
