--- a/app/src/main/res/layout/activity_inscription.xml
+++ b/app/src/main/res/layout/activity_inscription.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -7,7 +8,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/grad"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        tools:context=".launcher.InscriptionActivity">
 
         <ImageView
             android:id="@+id/logo_inscription_app"
@@ -47,7 +49,7 @@
                 <!-- Champs de saisie prenom-->
                 <EditText
                     android:id="@+id/new_prenom"
-                    android:layout_width="@dimen/input_text_inscription_width"
+                    android:layout_width="match_parent"
                     android:layout_height="@dimen/input_text_inscription_height"
                     android:layout_marginStart="@dimen/input_text_inscription_marginStart"
                     android:layout_marginTop="@dimen/input_text_inscription_marginTop"
@@ -79,7 +81,7 @@
                 <!-- Champs de saisie nom-->
                 <EditText
                     android:id="@+id/new_nom"
-                    android:layout_width="@dimen/input_text_inscription_width"
+                    android:layout_width="match_parent"
                     android:layout_height="@dimen/input_text_inscription_height"
                     android:layout_marginStart="@dimen/input_text_inscription_marginStart"
                     android:layout_marginTop="@dimen/input_text_inscription_marginTop"
@@ -111,7 +113,7 @@
                 <!-- Champs de saisie adresse mail-->
                 <EditText
                     android:id="@+id/newadressemail"
-                    android:layout_width="@dimen/input_text_inscription_width"
+                    android:layout_width="match_parent"
                     android:layout_height="@dimen/input_text_inscription_height"
                     android:layout_marginStart="@dimen/input_text_inscription_marginStart"
                     android:layout_marginTop="@dimen/input_text_inscription_marginTop"
@@ -143,7 +145,7 @@
                 <!-- Champs de saisie mot de passe-->
                 <EditText
                     android:id="@+id/newmot_de_passe"
-                    android:layout_width="@dimen/input_text_inscription_width"
+                    android:layout_width="match_parent"
                     android:layout_height="@dimen/input_text_inscription_height"
                     android:layout_marginStart="@dimen/input_text_inscription_marginStart"
                     android:layout_marginTop="@dimen/input_text_inscription_marginTop"
@@ -175,7 +177,7 @@
                 <!-- Bouton calendrier-->
                 <Button
                     android:id="@+id/newdate_de_naissance"
-                    android:layout_width="@dimen/input_text_inscription_width"
+                    android:layout_width="match_parent"
                     android:layout_height="@dimen/input_text_inscription_height"
                     android:layout_marginStart="@dimen/input_text_inscription_marginStart"
                     android:layout_marginTop="@dimen/input_text_inscription_marginTop"
@@ -210,7 +212,7 @@
                 <!-- Liste déroulante goal-->
                 <Spinner
                     android:id="@+id/newgoal"
-                    android:layout_width="@dimen/input_text_inscription_width"
+                    android:layout_width="match_parent"
                     android:layout_height="@dimen/input_text_inscription_height"
                     android:layout_marginStart="@dimen/input_text_inscription_marginStart"
                     android:layout_marginTop="@dimen/input_text_inscription_marginTop"
@@ -220,34 +222,44 @@
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/inscription_goback_inscription_layout"
+                android:id="@+id/inscription_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="20dp"
                 android:layout_marginBottom="10dp"
-                android:orientation="horizontal">
-                <!-- Bouton retour-->
-                <Button
-                    android:id="@+id/button_goback"
-                    android:layout_width="@dimen/button_goback_width"
-                    android:layout_height="@dimen/button_goback_height"
-                    android:layout_marginStart="@dimen/button_goback_marginStart"
-                    android:layout_marginBottom="@dimen/button_goback_marginBottom"
-                    android:background="@drawable/background_button_blue"
-                    android:text="@string/button_goback_text"
-                    android:textColor="#000"
-                    android:textSize="@dimen/button_text_size" />
+                android:orientation="vertical">
 
                 <!-- Bouton inscription-->
                 <Button
                     android:id="@+id/button_inscrip"
-                    android:layout_width="@dimen/button_inscrip_width"
-                    android:layout_height="@dimen/button_inscrip_height"
-                    android:layout_marginStart="@dimen/button_inscrip_marginStart"
-                    android:layout_marginEnd="@dimen/button_inscrip_marginEnd"
-                    android:layout_marginBottom="@dimen/button_inscrip_marginBottom"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/button_go_inscription_height"
+                    android:layout_marginStart="@dimen/button_go_inscription_marginStart"
+                    android:layout_marginEnd="@dimen/button_go_inscription_marginEnd"
                     android:background="@drawable/background_button_blue"
                     android:text="@string/button_inscrip_text"
+                    android:textColor="#000"
+                    android:textSize="@dimen/button_text_size" />
+                <!-- Bouton retour-->
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/inscription_back"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="10dp"
+                android:orientation="vertical">
+
+                <Button
+                    android:id="@+id/button_goback"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/button_goback_height"
+                    android:layout_marginStart="@dimen/button_goback_marginStart"
+                    android:layout_marginEnd="@dimen/button_goback_marginEnd"
+                    android:background="@drawable/background_button_blue"
+                    android:text="@string/button_goback_text"
                     android:textColor="#000"
                     android:textSize="@dimen/button_text_size" />
             </LinearLayout>
