--- a/app/src/main/res/layout/activity_connexion.xml
+++ b/app/src/main/res/layout/activity_connexion.xml
@@ -66,7 +66,8 @@
                 <LinearLayout
                     android:id="@+id/connexion_identifier_layout"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp">
                     <!-- Champs email de connexion-->
                     <EditText
                         android:id="@+id/connexion_identifier"
@@ -88,7 +89,8 @@
                 <LinearLayout
                     android:id="@+id/connexion_password_layout"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp">
                     <!-- Champs password de connexion-->
                     <EditText
                         android:id="@+id/connexion_password"
@@ -111,7 +113,7 @@
                     android:id="@+id/boutton_connection_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp">
+                    android:layout_marginTop="20dp">
                     <!-- Bouton de connexion-->
                     <Button
                         android:id="@+id/button_connect"
@@ -130,7 +132,7 @@
                     android:id="@+id/inscription_button"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="50dp"
+                    android:layout_marginTop="70dp"
                     android:layout_marginBottom="10dp"
                     android:orientation="vertical">
 
