--- a/app/src/main/res/layout/activity_connexion.xml
+++ b/app/src/main/res/layout/activity_connexion.xml
@@ -165,6 +165,7 @@
                         android:layout_height="@dimen/button_goback_height"
                         android:layout_marginStart="@dimen/button_goback_marginStart"
                         android:layout_marginEnd="@dimen/button_goback_marginEnd"
+                        android:layout_marginBottom="70dp"
                         android:background="@drawable/background_button_blue"
                         android:text="@string/button_goback_text"
                         android:textColor="#000"
